# InfoImp-Mandelbrot

./: InfoImp-Mandelbrot.sln  LICENSE  Makefile  README.md
InfoImp-Mandelbrot/: InfoImp-Mandelbrot.csproj  MandelView.cs  Mandelbrot.cs  MandelbrotNative.cs  Menu.cs  Platform.cs  Program.cs
InfoImp-Mandelbrot.Gtk/: InfoImp-Mandelbrot.Gtk.csproj  Program.cs
InfoImp-Mandelbrot.Wpf/: InfoImp-Mandelbrot.Wpf.csproj  Program.cs
InfoImp-Mandelbrot/EventHandlers/: GoButtonHandler.cs  IEventHandler.cs  MouseDownHandler.cs  MouseUpHandler.cs
InfoImp-Mandelbrot/Inputs/RadioSelectors/: AbstractRadioSelector.cs  ColorPaletteSelector.cs  ComputePlatformSelector.cs  PrefabSelector.cs  RadioSelector.cs
InfoImp-Mandelbrot/Inputs/TextFields/: AbstractInputField.cs  CenterXField.cs  CenterYField.cs  HeightField.cs  InputField.cs  LimitField.cs  ScaleField.cs  SizeField.cs  WithField.cs
InfoImp-Mandelbrot/Mandelbrot/: MandelView.cs  Mandelbrot.cs  MandelbrotNative.cs
Libmandelbrot/: Cargo.toml  Makefile  build.rs
Libmandelbrot/.cargo/: config.toml  config.toml.txt
Libmandelbrot/src/: ffi.rs  lib.rs
Libmandelbrot/src/ffi/: mod.rs  ocl.cl  ocl.rs  rayon.rs
